# mandelbrot

./: CMakeLists.txt  README.md  main.c
include/: driver.h  mandelbrot.h  mandelbrot_avx.h  mandelbrot_sse.h  utils.h
src/: driver.c  mandelbrot.c  mandelbrot_avx.c  utils.c
